updated iframe source

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<h2 class="section-title">Welcome to Explore Truth</h2><!-- /.section-title -->
 
 				<div class="media">
-					<iframe src="https://player.vimeo.com/video/121698707?title=0&byline=0&portrait=0" width="1017" height="570" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FImpact360Institute%2Fvideos%2F1707365889525392%2F&show_text=0&width=560" width="1017" height="570" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				</div><!-- /.media -->
 
 				<div class="section-content">
