added link to download free chapter

--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
 						</aside><!-- /.section-aside -->
 					</div><!-- /.col-xs-12 col-sm-12 col-md-6 col-lg-6 -->
 				</div><!-- /.row -->
+				
+				<div class="callout clearfix sample">
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+						<h3 class="callout-title">
+							Try a FREE chapter <br>
+							of Explore Truth
+						</h3><!-- /.callout-title -->
+					</div><!-- /.col-xs-12 col-sm-12 col-md-6 col-lg-6 -->
+
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+						<a href="http://impact360.goepps.com/explore-truth/How-Moral-Relativism-Hurts-Everyone.pdf" onclick=”_gaq.push([‘_trackEvent’,’Download’,’PDF’,this.href]);” target="_blank" class="btn btn-red">Download Now</a>
+					</div><!-- /.col-xs-12 col-sm-12 col-md-6 col-lg-6 -->
+				</div><!-- /.callout  clearfix-->
 			</div><!-- /.container -->
 		</section><!-- /.section-explore-primary -->
 
