inserted GA tracking code; added hero pitch to download audio book

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
 
 	<!-- App JS -->
 	<script src="js/functions.js"></script>
+	
+	<!-- GA Tracking Code -->
+	<script>
+  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  		ga('create', 'UA-46859146-3', 'auto');
+  		ga('send', 'pageview');
+
+	</script>
 </head>
 <body>
 
@@ -38,6 +50,9 @@
 	<!-- End Google Tag Manager -->
 
 <div class="wrapper">
+	<!--<nav class="navbar-alert">
+		<p>For a limited time, listen to the Explore Truth audio book for <a target="_blank" href="http://impact360.goepps.com/explore-truth/Explore-Truth-audiobook.wav.zip">FREE</a></p>
+	</nav>-->
 	<nav class="navbar">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" id="toggle">
@@ -74,11 +89,16 @@
 
 	<div class="intro" style="background-image: url(css/images/temp/intro.jpg); ">
 		<div class="intro-content">
-			<h2 class="intro-title">Learn how to break free from the riptide of <br> relativism in Explore Truth</h2><!-- /.intro-title -->
+			<!--<h2 class="intro-title">Learn how to break free from the riptide of <br> relativism in Explore Truth </h2> /.intro-title -->
+			<h2 class="intro-title">For a limited time, Download the Explore Truth audio book <br> for FREE!</h2>
+			<br>
+			<br>
+			<p style="font-size: 20px;">Learn how to break free from the riptide of relativism in Explore Truth</p>
 		</div><!-- /.intro-content -->
 
 		<div class="intro-actions">
-			<a href="#section-welcome" class="btn btn-transparent">Learn More</a>
+			<!--<a href="#section-welcome" class="btn btn-transparent">Learn More</a>-->
+			<a target="_blank" href="http://impact360.goepps.com/explore-truth/Explore-Truth-audiobook.wav.zip" class="btn btn-transparent">Download Now</a>
 		</div><!-- /.intro-actions -->
 	</div><!-- /.intro -->
 
