added tracking code to the download audio book button

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 		<div class="intro-actions">
 			<!--<a href="#section-welcome" class="btn btn-transparent">Learn More</a>-->
-			<a target="_blank" href="http://impact360.goepps.com/explore-truth/Explore-Truth-audiobook.wav.zip" class="btn btn-transparent">Download Now</a>
+			<a target="_blank" href="http://impact360.goepps.com/explore-truth/Explore-Truth-audiobook.wav.zip" onclick=”_gaq.push([‘_trackEvent’,’Download’,’wav’,this.href]);” class="btn btn-transparent">Download Now</a>
 		</div><!-- /.intro-actions -->
 	</div><!-- /.intro -->
 
